fix: fix objects with bogus prototypes (#131)

--- a/test/www/invalidCollection/index.html
+++ b/test/www/invalidCollection/index.html
@@ -11,9 +11,23 @@
   const router = makeRouter(['', 'info'])
 
   const notAMap = Object.create(new Map())
+  const nullConstructor = { constructor: null }
+  const constructorThatThrows = {
+    get constructor() {
+      throw new Error('haha!')
+    }
+  }
+  const toStringThatThrows = {
+    get [Symbol.toStringTag]() {
+      throw new Error('yolo!')
+    }
+  }
 
   router.addAfterHook('/info', () => {
     console.log(notAMap)
+    console.log(nullConstructor)
+    console.log(constructorThatThrows)
+    console.log(toStringThatThrows)
   })
 </script>
 </body>
